--- a/src/Querier/Querier.csproj
+++ b/src/Querier/Querier.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <Version>1.0.0</Version>
+    <PackageVersion>1.0.0</PackageVersion>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
