--- a/.releaserc
+++ b/.releaserc
@@ -16,13 +16,9 @@
         "@semantic-release/release-notes-generator",
         "@semantic-release/github",
         [
-			"@semantic-release/exec",
-            {
-                "prepareCmd": "chmod +x script.sh ../release.sh"
-            },
             "@semantic-release/exec",
             {
-                "prepareCmd": "../release.sh '${nextRelease.version}' 'Querier.csproj'"
+                "prepareCmd": "chmod +x script.sh ../release.sh && ../release.sh '${nextRelease.version}' 'Querier.csproj'"
             },
         ],
         [
