--- a/.releaserc
+++ b/.releaserc
@@ -18,7 +18,7 @@
         [
             "@semantic-release/exec",
             {
-                "prepareCmd": "chmod +x ../release.sh && ../release.sh '${nextRelease.version}' 'src/Querier/Querier.csproj'"
+                "prepareCmd": "chmod +x ../release.sh && ../release.sh '${nextRelease.version}' 'Querier/Querier.csproj'"
             },
         ],
         [
