--- a/tests/Querier.Tests/Querier.Tests.csproj
+++ b/tests/Querier.Tests/Querier.Tests.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.8" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
@@ -19,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Querier.SqlQuery\Querier.SqlQuery.csproj" />
     <ProjectReference Include="..\..\src\Querier\Querier.csproj" />
+    <ProjectReference Include="..\Querier.Web.Tests\Querier.Web.Tests.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,7 +28,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Integration\" />
     <Folder Include="Unit\" />
   </ItemGroup>
 
