--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,8 +22,10 @@ jobs:
       run: |
         sudo /etc/init.d/mysql start
         mysql -u root -p'root' -e "create database querier"; 
-        mysql -u root -p'root' querier < scripts/mysql_tables.sql
+        mysql -u root -p'root' querier < scripts/mysql_create.sql
+        mysql -u root -p'root' querier < scripts/mysql_data.sql
         mysql -u root -p'root' -e 'SHOW TABLES;' querier
+        mysql -u root -p'root' -e 'select * from Employee limit 1;' querier
           
     - name: Test
       run: dotnet test --verbosity normal
