--- a/tests/Querier.Web.Tests/Querier.Web.Tests.csproj
+++ b/tests/Querier.Web.Tests/Querier.Web.Tests.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\..\src\Querier\Querier.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
