--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,28 @@ jobs:
         sudo /etc/init.d/mysql start
         mysql -u root -p'root' < scripts/Chinook_MySql.sql
         mysql -u root -p'root' -e 'SHOW TABLES;' Chinook
-          
     - name: Test
       run: dotnet test --verbosity normal
+  test_release:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v4
+        with:
+          dry_run: true
+          working_directory: ./src
+          extra_plugins: |
+            @semantic-release/commit-analyzer
+            @semantic-release/release-notes-generator
+            @semantic-release/github
+            @semantic-release/git
+            @semantic-release/exec
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+#      - name: 'Pack & Publish project'
+#        if: ${{ steps.release.outputs.new_release_version }}
+#        run: |
+#          dotnet clean
+#          dotnet pack ${{ env.PROJECT_PATH }} --configuration Release --include-symbols --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
+#          dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg -k ${{ secrets.NUGET_TOKEN }} -s ${{ env.NUGET_PUSH_URL }}
