--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,10 @@ jobs:
         with:
           ci: false
           dry_run: true
-          branches: ['${{ github.ref }}']
+          branches: |
+            [
+                '${{ github.ref }}'
+            ]
           working_directory: ./src
           extra_plugins: |
             @semantic-release/commit-analyzer
