--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,12 +44,9 @@ jobs:
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
         with:
-          ci: false
           dry_run: true
           branches: |
-            [
-                'refs/pull/9/merge'
-            ]
+            ['refs/pull/9/merge']
           working_directory: ./src
           extra_plugins: |
             @semantic-release/commit-analyzer
