--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,20 @@ jobs:
         with:
           dry_run: true
           branches: |
-            ['refs/pull/9/merge']
+            [
+              '+([0-9])?(.{+([0-9]),x}).x',
+              'master',
+              'next',
+              'next-major',
+              {
+                name: 'beta',
+                prerelease: true
+              },
+              {
+                name: 'alpha',
+                prerelease: true
+              }
+            ]
           working_directory: ./src
           extra_plugins: |
             @semantic-release/commit-analyzer
