--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: .NET
+permissions: write-all
 
 on:
   pull_request:
@@ -47,7 +48,7 @@ jobs:
           dry_run: true
           branches: |
             [
-              '+([0-9])?(.{+([0-9]),x}).x',
+              '${{ github.head_ref }}',
               'master',
               'next',
               'next-major',
