--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "lts/*" 
+          node-version: "lts/*"
+      - name: Install dependencies
+        run: npm clean-install
       - name: Semantic Release
         run: npx semantic-release --branches ${{ github.head_ref }} --dry-run --no-ci --debug
         
