--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
     "conventional-changelog-conventionalcommits": "8.0.0",
-    "semantic-release": "24.0.0"
+    "semantic-release": "24.0.0",
+    "@semantic-release/exec": "6.0.3"
   }
 }
