--- a/.releaserc
+++ b/.releaserc
@@ -1,16 +1,5 @@
 {
-    "branches": [
-        "v+([0-9])?(.{+([0-9]),x}).x",
-        "main",
-        {
-            "name": "beta",
-            "prerelease": true
-        },
-        {
-            "name": "alpha",
-            "prerelease": true
-        }
-    ],
+    "branches": ["main"],
     "plugins": [
         "@semantic-release/commit-analyzer",
         "@semantic-release/release-notes-generator",
