--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,11 +7,11 @@ on:
     branches:
       - main
       
-#env:
-#  PROJECT_PATH: 'Gpanga.Example.SDK/Gpanga.Example.SDK.csproj'
-#  PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}/output
-#  NUGET_PUSH_URL: ${{ secrets.NUGET_PUSH_URL }}
-#  NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
+env:
+  PROJECT_PATH: 'src/Querier/Querier.csproj'
+  PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}/nuget
+  NUGET_PUSH_URL: ${{ secrets.NUGET_PUSH_URL }}
+  NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
   
 jobs:
   release:
@@ -36,10 +36,13 @@ jobs:
             @semantic-release/exec
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-#      - name: 'Pack & Publish project'
-#        if: ${{ steps.release.outputs.new_release_version }}
-#        run: |
-#          dotnet clean
-#          dotnet pack ${{ env.PROJECT_PATH }} --configuration Release --include-symbols --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
-#          dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg -k ${{ secrets.NUGET_TOKEN }} -s ${{ env.NUGET_PUSH_URL }}
+  publish:
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Pack & Publish project'
+        if: ${{ steps.release.outputs.new_release_version }}
+        run: |
+          dotnet clean
+          dotnet pack ${{ env.PROJECT_PATH }} --configuration Release --include-symbols --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
+          dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg -k ${{ secrets.NUGET_TOKEN }} -s ${{ env.NUGET_PUSH_URL }}
