--- a/.releaserc
+++ b/.releaserc
@@ -25,7 +25,7 @@
             "@semantic-release/git",
             {
                 "assets": [
-                    "Querier.csproj"
+                    "Querier/Querier.csproj"
                 ],
                 "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
             }
