--- a/src/Querier.SqlQuery/Querier.SqlQuery.csproj
+++ b/src/Querier.SqlQuery/Querier.SqlQuery.csproj
@@ -1,9 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Version>1.2.1</Version>
+    <PackageVersion>1.2.1</PackageVersion>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageId>Querier.SqlQuery.NET</PackageId>
+    <Title>Querier SqlQuery</Title>
+    <PackageTags>query;sqlbuilder;sql;querier;</PackageTags>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="..\..\README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
 
 </Project>
