--- a/.releaserc
+++ b/.releaserc
@@ -18,7 +18,7 @@
         [
             "@semantic-release/exec",
             {
-                "prepareCmd": "cd ../release.sh &&  chmod +x release.sh && release.sh '${nextRelease.version}'"
+                "prepareCmd": "cd .. && chmod +x release.sh && release.sh '${nextRelease.version}'"
             }
         ],
         [
