chore(workflow): update workflow action names

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,19 @@
-name: .NET
+name: .net
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET ${{ matrix.dotnet-version }}
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-  test_mysql:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET ${{ matrix.dotnet-version }}
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
-    - name: Setup MySQL
-      run: |
-        sudo /etc/init.d/mysql start
-        mysql -u root -p'root' < scripts/Chinook_MySql.sql
-        mysql -u root -p'root' -e 'SHOW TABLES;' Chinook
-          
-    - name: Test
-      run: dotnet test --verbosity normal
+      - uses: actions/checkout@v4
+      - name: Setup .NET ${{ matrix.dotnet-version }}
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Restore dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet build --no-restore
