chore: move and generate `CHANGELOG.md` at the root of the project

--- a/.releaserc
+++ b/.releaserc
@@ -17,7 +17,7 @@
         [
             "@semantic-release/changelog",
             {
-                "changelogFile": "CHANGELOG.md"
+                "changelogFile": "../CHANGELOG.md"
             }
         ],
         "@semantic-release/github",
@@ -31,7 +31,7 @@
             "@semantic-release/git",
             {
                 "assets": [
-                    "CHANGELOG.md",
+                    "../CHANGELOG.md",
                     "Querier/Querier.csproj",
                     "Querier.SqlQuery/Querier.SqlQuery.csproj"
                 ],
