--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,5 @@
 {
     "branches": [
-        "v+([0-9])?(.{+([0-9]),x}).x",
         "main",
         {
             "name": "beta",
@@ -8,6 +7,10 @@
         },
         {
             "name": "alpha",
+            "prerelease": true
+        },
+        {
+            "name": "develop",
             "prerelease": true
         }
     ],
