chore(workflow):  update mysql database file name

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup MySQL
         run: |
           sudo /etc/init.d/mysql start
-          mysql -u root -p'root' < scripts/Chinook_MySql.sql
+          mysql -u root -p'root' < scripts/chinook_mysql.sql
           mysql -u root -p'root' -e 'SHOW TABLES;' Chinook
 
       - name: Test
