--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,7 @@ jobs:
           extra_plugins: |
             @semantic-release/commit-analyzer
             @semantic-release/release-notes-generator
+            conventional-changelog-conventionalcommits
             @semantic-release/changelog
             @semantic-release/github
             @semantic-release/git
