--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -9,6 +9,9 @@ jobs:
   build:
     name: Build Docusaurus
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./docs
     steps:
       - uses: actions/checkout@v4
         with:
@@ -19,10 +22,8 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        working-directory: ./docs
         run: npm ci
       - name: Build website
-        working-directory: ./docs
         run: yarn build
 
       - name: Upload Build Artifact
