--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -9,9 +9,6 @@ jobs:
   build:
     name: Build Docusaurus
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./docs
     steps:
       - uses: actions/checkout@v4
         with:
@@ -20,12 +17,13 @@ jobs:
         with:
           node-version: 18
           cache: npm
-
+          cache-dependency-path: "./docs/package-lock.json"
       - name: Install dependencies
+        working-directory: ./docs
         run: npm ci
       - name: Build website
+        working-directory: ./docs
         run: yarn build
-
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
