chore: update `deploy-docs.yml`

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: build
+          working-directory: ./docs
 
   deploy:
     name: Deploy to GitHub Pages
