--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,8 +27,7 @@ jobs:
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: build
-          working-directory: ./docs
+          path: ./docs/build
 
   deploy:
     name: Deploy to GitHub Pages
